fix: light and dark mode now shares the same color

--- a/VBWEB/frontend/src/index.css
+++ b/VBWEB/frontend/src/index.css
@@ -3,7 +3,7 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
+  color-scheme: light only;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
 
@@ -42,9 +42,14 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: #f9f9f9;
   cursor: pointer;
   transition: border-color 0.25s;
+
+  /* disable any automatic UA appearance tweaks */
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
 }
 button:hover {
   border-color: #646cff;
